[package]
name = "rynx_browser"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "gzip", "brotli", "deflate", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] } # Added Tokio
regex = "1"
url = "2.5"
async-trait = "0.1"
scraper = "0.25"
ego-tree = "0.10.0"
unicode-width = "0.2"
arboard = "3.4"
futures-util = "0.3.31"
wiremock = "0.6"
directories = "6.0"
